// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component Snapshot Renders default 1`] = `
<div
  className="styles__Container-eZxbLb gnPRpr"
>
  <PublicNav />
</div>
`;

exports[`App Component Snapshot Renders logged in 1`] = `
<div
  className="styles__Container-eZxbLb gnPRpr"
>
  <MainNav />
</div>
`;
